fixed age regEx

--- a/lesson2/static/404.hbs
+++ b/lesson2/static/404.hbs
@@ -11,7 +11,7 @@
 <body>
 <body>
 <div class="header">
-    <a href="http://localhost:5000/auth">login in</a>
+    <a href="http://localhost:5000/auth">log in</a>
     <a href="http://localhost:5000/registration">sign in</a>
 </div>
 <div class="content">
